# poc-pdf-semantic-chunk

./: README.md  client.py  di_sample.py  doc_intelligence.py  example.json  function_app.py  pyproject.toml  requirements.txt
